--- a/Source/Sass/ux2/_ux2_colours.scss
+++ b/Source/Sass/ux2/_ux2_colours.scss
@@ -1,5 +1,8 @@
 ﻿/*Main Site Sass*/
 @import '../partials/_common_mixins';
 
+$ux2-slate-lighter: #176e83;
 $ux2-slate-light: #23556b;
 $ux2-slate-dark: #003348;
+
+$ux2-sage-green: #00dc00;
