--- a/Content/Sage/Styles/sage.css
+++ b/Content/Sage/Styles/sage.css
@@ -13517,7 +13517,8 @@ body.IsPreview .container-fluid {
         background: #f5f5f5;
         color: #003348; }
       #ux2_side_nav #ux2_side_nav_content .body .social .copyright {
-        display: none; }
+        display: none;
+        color: #CBCBC9; }
     #ux2_side_nav #ux2_side_nav_content .body ul {
       padding-left: 0;
       list-style: none; }
