--- a/Source/Sass/partials/_common_mixins.scss
+++ b/Source/Sass/partials/_common_mixins.scss
@@ -25,6 +25,21 @@
     margin-right: $margin-val;
 }
 
+@mixin default-shadow() {
+    -webkit-box-shadow: 0px 0px 6px 2px rgba($brand-black,0.1);
+    -moz-box-shadow: 0px 0px 6px 2px rgba($brand-black,0.1);
+    box-shadow: 0px 0px 6px 2px rgba($brand-black,0.1);
+}
+@mixin default-shadow-hover() {
+    -webkit-box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+    -moz-box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+    box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+}
+@mixin default-shadow-active() {
+    -webkit-box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+    -moz-box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+    box-shadow: 0px 4px 8px 4px rgba($brand-black,0.2);
+}
 //============================================================
 // Transforms
 //============================================================
