--- a/Source/Sass/partials/_common_variables.scss
+++ b/Source/Sass/partials/_common_variables.scss
@@ -11,3 +11,5 @@ $default-font-size-lg: 1.7em;
 $default-fixed-width: 1360px;
 $default_content_widget_padding: $default-padding-fixed-val 15px $default-padding-fixed-val 15px;
 $default-border-radius: 4px;
+$default-font: AdelleSansSAGE, sans-serif;
+$default-font-thin: AdelleSansSAGETh, sans-serif;
