--- a/Source/Sass/partials/_content_widget_hero_banner_tabs.scss
+++ b/Source/Sass/partials/_content_widget_hero_banner_tabs.scss
@@ -14,8 +14,12 @@
 
                     &.fade {
                         opacity: 1;
-
-                        .item {
+                        height:620px;
+                        overflow:hidden;
+                        .carousel-inner {
+                            height:620px;
+                            overflow:hidden;
+                            .item {
                             transition: opacity ease $default-transition-time;
                             left: 0;
                             opacity: 0; /* hide all slides */
@@ -23,18 +27,20 @@
                             font-size: 1.3em;
                             position: absolute;
                             width: 100%;
+                            height:620px;
+                            overflow:hidden;
                             display: block;
                             pointer-events:none;
 
                             .carousel-item-inner {
                                 .content-widget {
                                     .content-widget-inner {
-                                        padding: 110px 0 150px 0;
+                                        padding: 70px 0 0 0;
                                         transition: $default-transition-time ease;
                                         transform: translate(30%, 0);
                                         transition-delay: $default-transition-time;
                                         opacity: 0;
-
+                                        height:620px;
                                         @media (max-width:$screen-xs-max) {
                                             padding: 50px 15px;
                                         }
@@ -110,6 +116,7 @@
                                     }
                                 }
                             }
+                        }
                         }
                     }
                 }
