Adding solutions selector to sage one page

--- a/Source/Sass/sage.scss
+++ b/Source/Sass/sage.scss
@@ -82,3 +82,4 @@
 @import './ux2/_ux2_colours';
 @import './ux2/_ux2_header_nav';
 @import './ux2/_ux2_side_nav';
+@import './ux2/_ux2_content_widget_solutions';
